crates/pcb/tests/snapshots/path__path_directory_vendor_dir.snap
---
source: crates/pcb/tests/path.rs
expression: "sb.snapshot_dir(\"vendor\")"
---
=== github.com/testcompany/pathtest/v1.0.0/PathModule.zen

config_dir = Path("config")  # Reference to directory
Component(
    name="D1",
    footprint = Path("test.kicad_mod"),
    pin_defs={"1": "A", "2": "K"},
    pins={"1": Net("P1"), "2": Net("P2")}
)
=== github.com/testcompany/pathtest/v1.0.0/config/app.toml
name = "test-app"
=== github.com/testcompany/pathtest/v1.0.0/config/deep/readme.txt
Configuration files
=== github.com/testcompany/pathtest/v1.0.0/config/schema.json
{"type": "object"}
=== github.com/testcompany/pathtest/v1.0.0/test.kicad_mod
(footprint "test"
  (layer "F.Cu")
  (pad "1" smd rect (at -1 0) (size 1 1) (layers "F.Cu"))
  (pad "2" smd rect (at 1 0) (size 1 1) (layers "F.Cu"))
)
