crates/pcb/tests/snapshots/path__path_function_vendor.snap
---
source: crates/pcb/tests/path.rs
expression: "sb.snapshot_run(\"pcb\", [\"vendor\", \"--yes\", \"boards/PathTest.zen\"])"
---
Command: pcb vendor --yes boards/PathTest.zen
Exit Code: 0

--- STDOUT ---
✓ Found 1 zen files to analyze
✓ Dependencies analyzed

✓ Vendored 3 dependencies from 1 designs
Vendor directory: <TEMP_DIR>/src/vendor
--- STDERR ---
Warning: Path 'module_config.toml' does not exist
1 similar warning(s) were suppressed
   ╭─[ <TEMP_DIR>/cache/github/testcompany/pathtest/v1.0.0/PathModule.zen:2:15 ]
 2 │config_path = Path("module_config.toml", allow_not_exist = True) # this file doesn't exist
   │                                       ╰───────────────────────── Path 'module_config.toml' does not exist
   ├─[ <TEMP_DIR>/src/boards/PathTest.zen:2:18 ]
 2 │PathTestModule = Module("@github/testcompany/pathtest:v1.0.0/PathModule.zen")
   │                                               ╰────────────────────────────── Warning from `@github/testcompany/pathtest:v1.0.0/PathModule.zen`

Warning: Path 'build/Module' does not exist
1 similar warning(s) were suppressed
   ╭─[ <TEMP_DIR>/cache/github/testcompany/pathtest/v1.0.0/PathModule.zen:4:29 ]
 4 │add_property("layout_path", Path("build/Module", allow_not_exist = True))
   │                                                  ╰────────────────────── Path 'build/Module' does not exist
   ├─[ <TEMP_DIR>/src/boards/PathTest.zen:2:18 ]
 2 │PathTestModule = Module("@github/testcompany/pathtest:v1.0.0/PathModule.zen")
   │                                               ╰────────────────────────────── Warning from `@github/testcompany/pathtest:v1.0.0/PathModule.zen`
