crates/pcb/tests/snapshots/path__path_function_vendor_dir.snap
---
source: crates/pcb/tests/path.rs
expression: "sb.snapshot_dir(\"vendor\")"
---
=== github.com/testcompany/pathtest/v1.0.0/PathModule.zen

config_path = Path("module_config.toml", allow_not_exist = True) # this file doesn't exist
data_path = Path("module_data.json")
add_property("layout_path", Path("build/Module", allow_not_exist = True))
Component(
    name="D1",
    footprint = Path("test.kicad_mod"),
    pin_defs={"1": "A", "2": "K"},
    pins={"1": Net("P1"), "2": Net("P2")}
)
=== github.com/testcompany/pathtest/v1.0.0/module_data.json
{"test": true}
=== github.com/testcompany/pathtest/v1.0.0/test.kicad_mod
(footprint "test"
  (layer "F.Cu")
  (pad "1" smd rect (at -1 0) (size 1 1) (layers "F.Cu"))
  (pad "2" smd rect (at 1 0) (size 1 1) (layers "F.Cu"))
)
