crates/pcb/tests/snapshots/path__path_local_mixed_build.snap
---
source: crates/pcb/tests/path.rs
expression: "sb.snapshot_run(\"pcb\", [\"build\", \"boards/LocalPathTest.zen\"])"
---
Command: pcb build boards/LocalPathTest.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
Existing file: package://boards/existing.toml
Nonexistent file: package://boards/missing.toml
Existing directory: package://boards/config
Nonexistent directory: package://boards/missing_dir
Warning: Path 'build/LocalPathTest' does not exist
    ╭─[ <TEMP_DIR>/.pcb/cache/github.com/diodeinc/stdlib/<STDLIB_VERSION>/properties.zen:68:37 ]
 68 │        add_property("layout_path", Path(path, allow_not_exist=True))
    │                                                    ╰──────────────── Path 'build/LocalPathTest' does not exist
    ├─[ <TEMP_DIR>/boards/LocalPathTest.zen:4:1 ]
  4 │Layout(name="LocalPathTest", path="build/LocalPathTest", bom_profile=None)
    │                                     ╰───────────────────────────────────── Path does not exist in Layout call

Warning: Path 'missing.toml' does not exist
   ╭─[ <TEMP_DIR>/boards/LocalPathTest.zen:7:20 ]
 7 │nonexistent_file = Path("missing.toml", allow_not_exist=True)
   │                                        ╰───────────────────── Path 'missing.toml' does not exist

Warning: Path 'missing_dir' does not exist
   ╭─[ <TEMP_DIR>/boards/LocalPathTest.zen:9:19 ]
 9 │nonexistent_dir = Path("missing_dir", allow_not_exist=True)
   │                                      ╰───────────────────── Path 'missing_dir' does not exist

✓ LocalPathTest.zen (0 components)
