crates/pcb/tests/snapshots/path__path_missing_no_allow_build.snap
---
source: crates/pcb/tests/path.rs
expression: "sb.snapshot_run(\"pcb\", [\"build\", \"boards/FailingTest.zen\"])"
---
Command: pcb build boards/FailingTest.zen
Exit Code: 1

--- STDOUT ---

--- STDERR ---
Error: Failed to resolve path 'this_file_does_not_exist.toml': File not found: <TEMP_DIR>/boards/this_file_does_not_exist.toml
   ╭─[ <TEMP_DIR>/boards/FailingTest.zen:3:18 ]
   │
 3 │ missing_config = Path("this_file_does_not_exist.toml")
   │                  ──────────────────┬──────────────────  
   │                                    ╰──────────────────── Failed to resolve path 'this_file_does_not_exist.toml': File not found: <TEMP_DIR>/boards/this_file_does_not_exist.toml
───╯

Stack trace (most recent call last):
    <TEMP_DIR>/boards/FailingTest.zen:3:18 (Failed to resolve path 'this_file_does_not_exist.toml': File not found: <TEMP_DIR>/boards/this_file_does_not_exist.toml)
      ╰─ Path (called from <TEMP_DIR>/boards/FailingTest.zen:3:18-55)

✗ FailingTest.zen: Build failed
Error: Build failed with errors
